<resources>
    <string name="app_name">SmartTraffic</string>
    <string name="title_activity_mine">个人中心</string>
    <string name="navigation_drawer_open">打开侧栏</string>
    <string name="navigation_drawer_close">关闭侧栏</string>

    <string name="head">联想智能交通系统</string>
    <string name="nav_account">个人</string>
    <string name="nav_setting">设置</string>
    <string name="nav_about">关于</string>
    <string name="exit">退出登录</string>
    <string name="click_login">点击头像登录</string>
    <string name="user_login">用户登录</string>
    <string name="net_setting">网络设置</string>
    <string name="no_data">无数据</string>
    <string name="auto_login">自动登陆</string>
    <string name="remember_pwd">记住密码</string>
    <string name="double_click_exit">再按一次退出程序</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="hint_name">用户名</string>
    <string name="hint_password">密码</string>
    <string name="error_login_empty">用户名不能为空</string>
    <string name="error_pwd_empty">密码不能为空</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="item3">item3</string>
    <string name="item4">item4</string>
    <string name="title_item_main">Tab</string>
    <string name="main_home">主页面</string>
    <string name="creative_design">创意设计</string>
    <string name="title_main">主页</string>
    <!--tab选项名称-->
    <string-array name="tab_names">
        <item>第一页</item>
        <item>第二页</item>
        <item>第三页</item>
    </string-array>

</resources>
